# term-pcl

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linux_build.yml
debian/: apt-repository.md  changelog  control  copyright  rules
debian/source/: options
examples/: robolabsai_3d_pointcloud.ply
include/term_pcl/: chunk_cache.hpp  chunk_loader.hpp  cloud_optimizer.hpp  cloud_provider.hpp  color_map.hpp  hierarchical_lod.hpp  lod_cloud_provider.hpp  point_cloud_loader.hpp  spatial_lod.hpp  termcloud_index.hpp  terminal_ui.hpp  types.hpp  visualizer.hpp
src/: cloud_provider.cpp  color_map.cpp  terminal_ui.cpp  visualizer.cpp
src/term_pcl/: chunk_cache.cpp  chunk_loader.cpp  cloud_optimizer.cpp  hierarchical_lod.cpp  lod_cloud_provider.cpp  main.cpp  point_cloud_loader.cpp  spatial_lod.cpp  termcloud_index.cpp
tests/: test_chunk_cache.cpp  test_chunk_loader.cpp  test_cli.sh  test_cloud_optimizer.cpp  test_color_map.cpp  test_hierarchical_lod.cpp  test_lod_cloud_provider.cpp  test_point_cloud_loader.cpp  test_spatial_lod.cpp  test_termcloud_index.cpp  test_terminal_ui.cpp
tests/fixtures/: bad.xyz  bad.xyzrgb  sample.pcd  sample.xyz  sample.xyzn  sample.xyzrgb
